--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "autoprefixer": "^9.4.3",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-plugin-styled-components": "^1.10.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.6.0",
@@ -35,7 +36,8 @@
     "eslint-plugin-react": "^7.12.3",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "lodash": "^4.17.11",
+    "less": "^2.7.3",
+    "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
@@ -47,6 +49,8 @@
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.1",
+    "@material-ui/icons": "^3.0.2",
     "autoprefixer": "^9.4.4",
     "axios": "^0.18.0",
     "babel-cli": "^6.9.0",
@@ -69,6 +73,11 @@
     "react-flex-proto": "^1.0.0",
     "react-toasts": "^2.0.14",
     "react-transition-group": "^2.5.3",
+    "semantic-ui": "^2.4.2",
+    "semantic-ui-less": "^2.4.1",
+    "semantic-ui-react": "^0.84.0",
+    "shallowequal": "^1.1.0",
+    "styled-components": "^4.1.3",
     "webpack-dev-server": "^3.1.14",
     "webpack-md5-hash": "^0.0.6",
     "webpack-node-externals": "^1.7.2"
