--- a/package.json
+++ b/package.json
@@ -82,9 +82,11 @@
     "semantic-ui-less": "^2.4.1",
     "semantic-ui-react": "^0.84.0",
     "shallowequal": "^1.1.0",
+    "steem": "^0.7.4",
     "styled-components": "^4.1.3",
     "webpack-dev-server": "^3.1.14",
     "webpack-md5-hash": "^0.0.6",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "wlsjs": "^0.1.1"
   }
 }
