--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.3",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "less": "^2.7.3",
@@ -58,6 +59,8 @@
     "babel-cli": "^6.9.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
+    "bootstrap": "3.3.7",
+    "chartist": "0.10.1",
     "classnames": "^2.2.5",
     "clean-webpack-plugin": "^1.0.0",
     "d3": "^5.8.2",
@@ -67,15 +70,26 @@
     "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "loaders.css": "^0.1.2",
     "lodash": "^4.7.0",
     "moment": "^2.23.0",
+    "node-sass-chokidar": "0.0.3",
+    "npm-run-all": "4.1.2",
+    "postcss-preset-env": "^6.6.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-alert": "^4.0.4",
     "react-alert-template-basic": "^1.0.0",
+    "react-bootstrap": "0.32.1",
+    "react-chartist": "0.13.1",
     "react-d3-library": "^1.1.8",
     "react-dom": "^16.7.0",
     "react-flex-proto": "^1.0.0",
+    "react-google-maps": "9.4.5",
+    "react-loaders": "^3.0.1",
+    "react-notification-system": "0.2.17",
+    "react-router-dom": "4.2.2",
+    "react-scripts": "1.1.1",
     "react-toasts": "^2.0.14",
     "react-transition-group": "^2.5.3",
     "semantic-ui": "^2.4.2",
@@ -87,18 +101,6 @@
     "webpack-dev-server": "^3.1.14",
     "webpack-md5-hash": "^0.0.6",
     "webpack-node-externals": "^1.7.2",
-    "wlsjs": "^0.1.1",
-    "bootstrap": "3.3.7",
-    "chartist": "0.10.1",
-    "loaders.css": "^0.1.2",
-    "node-sass-chokidar": "0.0.3",
-    "npm-run-all": "4.1.2",
-    "react-bootstrap": "0.32.1",
-    "react-chartist": "0.13.1",
-    "react-google-maps": "9.4.5",
-    "react-loaders": "^3.0.1",
-    "react-notification-system": "0.2.17",
-    "react-router-dom": "4.2.2",
-    "react-scripts": "1.1.1"
+    "wlsjs": "^0.1.1"
   }
 }
